--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@ body {
   font-family: "Vazirmatn", sans-serif !important;
   max-width: 100vw;
   overflow-x: hidden;
+  padding: 0 !important;
 }
 
 * {
